# cmake

another-one-project/: CMakeLists.txt
simple-project/: CMakeLists.txt  SimpleProject.cpp
